# unix-t

./: .gitignore  CMakeLists.txt  README.md  main.c
csapp/: CMakeLists.txt  show-bytes.c
dir/: CMakeLists.txt  dir.c  list_file.c  stat.c
exit/: aexit.c  environ.c  getrlimit.c  skip.c
file/: copy.c  double_write.c  dup.c  dup2.c  fcntl_copy.c  fcntl_get_set.c  fcntl_lock.c  fcntl_nonblock.c  fsync.c  ioctl.c  seek.c  unix_file.c
include/: common.h  ipc_common.h  unix_file.h
io/: char.c  line.c  memopen.c  read.c  temp.c  text.c
ipc/: ipc.md  pipe.c  process_a.c  process_b.c
socket/: gethostent.c
testdata/: read.txt
